# little-john-test

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  aegra.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json
apps/api/: .env.example  .gitignore  Dockerfile  README.md  aegra.json  docker-compose.yml  package.json  pyproject.toml
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: __init__.py  prompt_utils.py
apps/api/src/core/: config.py  database.py  observability.py  pagination.py
apps/api/src/db/: __init__.py  alembic.ini  base.py  migration_runner.py  models.py
apps/api/src/document_categories/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
apps/api/src/documents/: __init__.py  chunking.py  classification.py  classification_service.py  content_extraction.py  embeddings.py  extraction.py  extraction_repository.py  extraction_schemas.py  extraction_service.py  model.py  ocr.py  processing.py  processing_schemas.py  repository.py  reranking.py  retrieval.py  router.py  runtime.py  schemas.py  service.py  validation.py
apps/api/src/extraction_templates/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
apps/api/src/little_john_test/: __init__.py  graph.py  prompts.py
apps/api/src/storage/: object_store.py  r2.py
apps/api/src/templates/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
apps/api/tests/agents/: test_document_extraction_correction_merge.py  test_document_extraction_normalization.py  (+2 more)
(+140 files in other folders)
