[project]
name = "little_john_test"
version = "0.1.0"
description = "little-john-test"
requires-python = ">=3.12"

dependencies = [
    "aegra-cli>=0.8.2",
    "langgraph>=1.0.8",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/little_john_test"]
